More dark mode fixes.

--- a/styles/_map.pcss
+++ b/styles/_map.pcss
@@ -8,6 +8,10 @@
 
     &__list {
         padding: 0;
+
+        p {
+            @mixin dark-background-links;
+        }
     }
 
     &__subheader {
