--- a/styles/_post.pcss
+++ b/styles/_post.pcss
@@ -288,104 +288,6 @@
     }
 }
 
-/** define related-posts */
-.related-posts {
-    padding-top: 30px;
-
-    &__collection-name {
-        font-weight: bold;
-        text-align: center;
-    }
-
-    &__arrow-down {
-        margin: * auto;
-
-        & svg {
-            fill: var(--light-background-text);
-            size: 4em;
-        }
-    }
-
-    &__collection {
-        align-items: center;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: * auto;
-        max-width: 1360px;
-        padding: * var(--body-padding) var(--body-padding);
-    }
-
-    &__cover {
-        box-sizing: border-box;
-        display: inline-block;
-        flex-basis: 320px;
-        height: 180px;
-        margin: 6px;
-        overflow: hidden;
-        padding: 0;
-        position: relative;
-
-        /* (320px + 2*6px)*count + 16px*2 */
-
-        @media (width < 696px) {  /* One in row */
-            /* show 2 */
-
-            &:nth-child(n+3) {
-                display: none;
-            }
-        }
-
-        @media (696px <= width < 1028px) { /* Two in row */
-            /* show 2 rows, i.e. 4 items */
-
-            &:nth-child(n+5) {
-                display: none;
-            }
-        }
-        @media (1028px <= width < 1360px) { /* Three in row */
-            /* show 3 or 6 depending on count */
-
-            &:nth-child(n+7) { /* hide > 6 */
-                display: none;
-            }
-
-
-            &:nth-last-child(-n+5):first-child:nth-child(n+4),
-            &:nth-last-child(-n+5):first-child ~ &:nth-child(n+4) {
-                /* &:at-most(5):nth-child(n+4) */
-                display: none;
-            }
-        }
-
-        @media (width >= 1360px) { /* More than four */
-
-            &:nth-child(n+9) {
-                display: none;
-            }
-        }
-    }
-
-    &__cover-image {
-        border-color: #dddddd;
-        border-radius: 4px;
-    }
-
-    &__title-background {
-        background-color: rgba(0, 0, 0, 0.2);
-        box-shadow: 0 0 100px 71px rgba(0, 0, 0, 0.2);
-        color: var(--dark-background-text);
-        font-weight: 400;
-        margin: 0;
-        padding: 5px var(--body-padding);
-        position: absolute * 0 0 0;
-        text-align: center;
-        text-decoration: none;
-        white-space: normal;
-    }
-}
-
 /** @define pager */
 .pager {
     display: flex;
